Minor updates. Export make_mat_names.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(inner_join)
 export(int_info)
 export(is.ped)
 export(left_join)
+export(make_mat_names)
 export(make_newdata)
 export(mutate)
 export(nest_tdc)
@@ -132,7 +133,6 @@ importFrom(rlang,quos)
 importFrom(rlang,sym)
 importFrom(stats,as.formula)
 importFrom(stats,median)
-importFrom(stats,model.frame)
 importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(tidyr,crossing)
